--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-10-25">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-10-25-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/ff9c8967726b63baf53a54f2227f5ddb.webp" alt="10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-10-25-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、韩国、新加坡、加拿大、欧洲、日本、美国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-10-24">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-10-24-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -219,20 +233,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-10-15">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-10-15-clash-node.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/e257e01abd056413997dc08bd6b623fb.webp" alt="10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-10-15-clash-node.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了欧洲、韩国、香港、加拿大、新加坡、日本、美国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-12-clash-windows.htm" title="4月12日→22.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接">4月12日→22.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-4-clash-node-daily-updates.htm" title="5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-4-free-clash.htm" title="9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-4-19-free-node-subscribe.htm" title="4月19日→20M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月19日→20M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-23-node-share.htm" title="10月23日→20.3M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月23日→20.3M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-20-free-clash-subscribe.htm" title="5月20日→22.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">5月20日→22.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-17-node-share-links.htm" title="8月17日→18.2M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">8月17日→18.2M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-29-free-subscribe-node.htm" title="4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-20-free-subscribe-node.htm" title="7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-4-free-ssr-subscribe.htm" title="8月4日→22.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">8月4日→22.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm" title="3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接">3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-21-clash-windows.htm" title="3月21日18.1M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月21日18.1M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-8-free-ssr-node.htm" title="8月8日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">8月8日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-12-clash-windows.htm" title="4月12日→22.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接">4月12日→22.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-8-free-ssr-node.htm" title="10月8日→22.5M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">10月8日→22.5M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-1-free-v2ray-subscribe.htm" title="8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm" title="10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-7-free-v2ray-subscribe.htm" title="9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-9-free-v2ray-subscribe.htm" title="4月9日→18.8M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月9日→18.8M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
